Updated names in index.html

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 
-    <div>Hello from Abdul Samie to the world</div>
-	<div>Hello from Saira Awan to the world</div>
+    <div>Hello from Abdul Samie & Saira Awan to the world </div>
+	
 	
     
 </body>
